<resources>
    <string name="android">Android</string>
    <string name="animations">Animations</string>
    <string name="app_name">UI Demo</string>
    <string name="augmented_reality">Augmented Reality</string>
    <string name="barcodes">Barcodes</string>
    <string name="cancel">Cancel</string>
    <string name="charts">Charts</string>
    <string name="chat">Chat</string>
    <string-array name="chat_messages">
        <item>Hi! How\'s your day going?</item>
        <item>What are you up to today?</item>
        <item>Any fun plans for the weekend?</item>
        <item>Have you watched any good movies lately?</item>
        <item>What\'s your favorite hobby?</item>
        <item>Do you have any pets?</item>
        <item>What kind of music do you like?</item>
        <item>Where\'s the best place you\'ve ever traveled to?</item>
        <item>What\'s your favorite book?</item>
        <item>Do you enjoy cooking? If so, what\'s your favorite dish to make?</item>
    </string-array>
    <string-array name="chat_responses">
        <item>That sounds great!</item>
        <item>How interesting!</item>
        <item>I didn\'t know that.</item>
        <item>That\'s nice!</item>
        <item>I love it!</item>
        <item>Lucky you!</item>
        <item>Impressive!</item>
        <item>I see.</item>
        <item>How fun!</item>
        <item>That\'s a good idea!</item>
    </string-array>
    <string name="click_me">Click me!</string>
    <string name="confirm">Confirm</string>
    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Åland Islands</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Caribbean Netherlands</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curaçao</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands</item>
        <item>Faroe Islands</item>
        <item>Federated States of Micronesia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn Islands</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>São Tomé and Príncipe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Eswatini</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>United States Minor Outlying Islands</item>
        <item>United States Virgin Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="country">Country:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="default_language">EN</string>
    <string name="demo">demo</string>
    <string name="draw_a_signature">Draw a signature:</string>
    <string name="embedded_browser">Embedded browser</string>
    <string name="english">English</string>
    <string name="enter_a_name_">Enter a name...</string>
    <string name="enter_some_text_here_">Enter some text here...</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="enter_the_recovery_code">Enter the recovery code.</string>
    <string name="enter_the_username">Enter the username.</string>
    <string-array name="f_names">
        <item>Emily</item>
        <item>Sophia</item>
        <item>Isabella</item>
        <item>Olivia</item>
        <item>Mia</item>
        <item>Grace</item>
    </string-array>
    <string name="female">Female</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="form">Form</string>
    <string name="french">French</string>
    <string name="friday">Friday</string>
    <string name="gender">Gender:</string>
    <string name="german">German</string>
    <string name="google_maps">Google Maps</string>
    <string name="help_animations"><![CDATA[
            <p><strong>Animations</strong> are a fun way to make the UI more responsive and interesting.</p><p>&nbsp;</p><p>The default animations in Android modify the <strong>size, position, and visibility</strong> of elements on the screen. These animations can be combined as needed to achieve the desired effect.</p><p>&nbsp;</p><p>However, in excess, they can be visually overwhelming and taxing on less powerful devices, so it\'s important to choose the right places and moments to use them.</p>
        ]]></string>
    <string name="i_already_have_a_code">I already have a code</string>
    <string name="log_in">Log in</string>
    <string name="password_">Password...</string>
    <string name="recovery_code_">Recovery code...</string>
    <string name="register_new_account">Register new account</string>
    <string name="repeat_password_">Repeat password...</string>
    <string name="ui">UI</string>
    <string name="username_">Username...</string>
</resources>