<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/v_background_splash"
        android:visibility="invisible"
        android:background="@color/ui_demo_green"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/ll_splash"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_logo_splash"
            android:importantForAccessibility="no"
            android:src="@drawable/mdroid"
            android:layout_width="200dp"
            android:layout_height="135dp"
            app:tint="#f0f0f0" />
        <View
            android:id="@+id/v_logo_splash"
            android:background="#f0f0f0"
            android:layout_width="200dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:padding="5dp"
                android:id="@+id/tv_title_splash_1"
                android:textColor="#0f0f0f"
                android:gravity="center"
                android:text="@string/android"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="5dp"
                android:id="@+id/tv_title_splash_2"
                android:textColor="#0f0f0f"
                android:gravity="center"
                android:text="@string/ui"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="5dp"
                android:id="@+id/tv_title_splash_3"
                android:textColor="#0f0f0f"
                android:gravity="center"
                android:text="@string/demo"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/v_click_splash"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>