<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_above="@id/rl_login"
            android:layout_width="200dp"
            android:layout_height="200dp">
            <ImageView
                android:src="@drawable/mdroid"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:tint="@color/ui_demo_blue" />
            <ImageView
                android:layout_marginTop="-50dp"
                android:layout_marginBottom="-50dp"
                android:alpha="0.5"
                android:rotation="15"
                android:src="@drawable/glare"
                android:id="@+id/iv_glare_login"
                android:layout_width="80dp"
                android:layout_height="300dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_login"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/rl_user_login"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <EditText
                    android:hint="@string/username_"
                    android:textColorHint="@color/light_gray"
                    android:textColor="@color/dark_gray"
                    android:autofillHints="emailAddress"
                    android:textCursorDrawable="@null"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/et_password_login"
                    android:nextFocusForward="@id/et_password_login"
                    android:nextFocusLeft="@id/et_password_login"
                    android:nextFocusRight="@id/et_password_login"
                    android:nextFocusUp="@id/et_password_login"
                    android:imeOptions="actionNext"
                    android:maxLength="50"
                    android:maxEms="50"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:id="@+id/et_user_login"
                    android:paddingStart="60dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/bg_field_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/iv_user_login"
                    android:padding="12dp"
                    android:src="@drawable/user"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:tint="@color/light_gray" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_password_login"
                android:layout_below="@id/rl_user_login"
                android:layout_marginTop="20dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <EditText
                    android:hint="@string/password_"
                    android:textColorHint="@color/light_gray"
                    android:textColor="@color/dark_gray"
                    android:autofillHints="emailAddress"
                    android:textCursorDrawable="@null"
                    android:inputType="textPassword"
                    android:imeOptions="actionGo"
                    android:id="@+id/et_password_login"
                    android:paddingStart="60dp"
                    android:paddingEnd="60dp"
                    android:maxLength="50"
                    android:maxEms="50"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:background="@drawable/bg_field_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/iv_password_login"
                    android:padding="12dp"
                    android:src="@drawable/lock"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:tint="@color/light_gray" />
                <ImageView
                    android:visibility="invisible"
                    android:id="@+id/iv_bt_show_password_login"
                    app:tint="@color/dark_gray_to_light_gray"
                    android:src="@drawable/hidden"
                    android:padding="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:visibility="invisible"
                android:id="@+id/rl_repeat_password_login"
                android:layout_below="@id/rl_password_login"
                android:layout_marginTop="20dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <EditText
                    android:hint="@string/repeat_password_"
                    android:textColorHint="@color/light_gray"
                    android:textColor="@color/dark_gray"
                    android:autofillHints="emailAddress"
                    android:textCursorDrawable="@null"
                    android:inputType="textPassword"
                    android:imeOptions="actionGo"
                    android:id="@+id/et_repeat_password_login"
                    android:paddingStart="60dp"
                    android:paddingEnd="60dp"
                    android:maxLength="50"
                    android:maxEms="50"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:background="@drawable/bg_field_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/iv_repeat_password_login"
                    android:padding="12dp"
                    android:src="@drawable/repeat"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:tint="@color/light_gray" />
                <ImageView
                    android:visibility="invisible"
                    android:id="@+id/iv_bt_show_repeat_password_login"
                    app:tint="@color/dark_gray_to_light_gray"
                    android:src="@drawable/hidden"
                    android:padding="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>
            </RelativeLayout>
            <TextView
                android:layout_below="@id/rl_password_login"
                android:padding="20dp"
                android:id="@+id/tv_bt_forgot_login"
                android:textColor="@color/dark_gray_to_light_gray"
                android:textSize="14sp"
                android:text="@string/forgot_your_password"
                android:gravity="center_vertical|end"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
            <RelativeLayout
                android:layout_marginTop="40dp"
                android:layout_below="@id/tv_bt_forgot_login"
                android:id="@+id/rl_bt_login"
                android:background="@drawable/bg_rounded_button_2"
                android:layout_centerHorizontal="true"
                android:layout_width="200dp"
                android:layout_height="60dp">
                <TextView
                    android:id="@+id/tv_bt_login"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <com.github.ybq.android.spinkit.SpinKitView
                    android:visibility="invisible"
                    app:SpinKit_Color="@color/white"
                    app:SpinKit_Style="ThreeBounce"
                    android:id="@+id/skv_load_login"
                    android:layout_centerInParent="true"
                    android:background="@color/transparent"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
            <TextView
                android:layout_below="@id/rl_bt_login"
                android:padding="20dp"
                android:id="@+id/tv_bt_register_login"
                android:textColor="@color/dark_gray_to_light_gray"
                android:textSize="16sp"
                android:text="@string/register_new_account"
                android:gravity="center"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:visibility="invisible"
                android:id="@+id/rl_code_login"
                android:layout_below="@id/rl_user_login"
                android:layout_marginTop="20dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <EditText
                    android:hint="@string/recovery_code_"
                    android:textColorHint="@color/light_gray"
                    android:textColor="@color/dark_gray"
                    android:textCursorDrawable="@null"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:imeOptions="actionGo"
                    android:textSize="24sp"
                    android:id="@+id/etCodeLogin"
                    android:paddingStart="60dp"
                    android:paddingEnd="20dp"
                    android:maxLength="8"
                    android:maxEms="8"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:background="@drawable/bg_field_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/ivCodeLogin"
                    android:padding="12dp"
                    android:src="@drawable/asterisk"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:tint="@color/light_gray" />
            </RelativeLayout>
            <TextView
                android:visibility="invisible"
                android:layout_below="@id/rl_code_login"
                android:padding="20dp"
                android:id="@+id/tv_bt_code_login"
                android:textColor="@color/dark_gray_to_light_gray"
                android:textSize="14sp"
                android:text="@string/i_already_have_a_code"
                android:gravity="center_vertical|end"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <View
            android:background="#AAFFFFFF"
            android:visibility="invisible"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/v_click_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>
</RelativeLayout>